--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Private Chef</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Jaldi|Muli:200" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
           integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href="sass/main.css" type="text/css" rel="stylesheet">
@@ -13,7 +14,7 @@
 <div class="container-main-menu">
     <nav class="main-menu container">
         <header><a href="#"><sup>Chef </sup>Michael Bolano </a></header>
-        <div class="icon-main-menu"><i class="fa fa-window-minimize" aria-hidden="true"></i></div>
+        <div class="icon-header"><i class="fa fa-window-minimize" aria-hidden="true"></i></div>
         <ul class="menu">
             <li><a class="active" href="#">Home</a></li>
             <li><a href="#">Menus</a></li>
@@ -48,8 +49,27 @@
     </video>
     <div class="title-container">
         <div class="title">gourmet chef<br> at your dinner table</div>
+        <div class="double-line"></div>
     </div>
 </div>
+<div class="information-container">
+
+    <div class="chef-img"></div><div class="information">
+        <h1>Meet The Chef</h1>
+        <div class="double-line"></div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab alias architecto ex illum mollitia
+            voluptatibus?
+            At dicta laboriosam mollitia natus nulla? Dicta ex explicabo fuga nulla quis, suscipit veniam. Ab
+            adipisci
+            at, aut, dicta eius, exercitationem explicabo incidunt iure labore molestiae nam provident quia
+            sequi soluta
+            suscipit unde voluptatibus?</p>
+        <p>Tel: 123-456-7890 | Email:info@mymail.com</p>
+    </div>
+</div>
+</div>
+
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 <script src="script.js"></script>
 </body>
