second page for desktop and tablet, modify main menu

--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
     </div>
 </div>
 <div class="information-container">
-
-    <div class="chef-img"></div><div class="information">
+    <div class="information">
         <h1>Meet The Chef</h1>
         <div class="double-line"></div>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab alias architecto ex illum mollitia
@@ -66,9 +65,36 @@
             suscipit unde voluptatibus?</p>
         <p>Tel: 123-456-7890 | Email:info@mymail.com</p>
     </div>
+    <div class="chef-img">
+    </div>
 </div>
+<div class="restaurant-menu">
+    <div class="container">
+    <div class="menus">
+        <div class="menu-information">
+            <div class="menu-img"><img src="https://static.wixstatic.com/media/e1c78c_e739583ccde24af893dd10f914b3e26f.jpg/v1/fill/w_180,h_180,al_c,q_80,usm_0.66_1.00_0.01/e1c78c_e739583ccde24af893dd10f914b3e26f.webp"> </div>
+            <h1>Tasting Menu</h1>
+            <div class="double-line"></div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, beatae.</p>
+       <p><a href="#">See Menu &gt;</a> </p>
+        </div><!--
+        --><div class="menu-information">
+            <div class="menu-img"><img src="https://static.wixstatic.com/media/e1c78c_4a31dac3b8974025871cdbd8ea43f928.jpg/v1/fill/w_180,h_180,al_c,q_80,usm_0.66_1.00_0.01/e1c78c_4a31dac3b8974025871cdbd8ea43f928.webp"></div>
+            <h1>Chef's Choice</h1>
+            <div class="double-line"></div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, beatae.</p>
+            <p><a href="#">See Menu &gt;</a> </p>
+        </div><!--
+        --><div class="menu-information">
+            <div class="menu-img"><img src="https://static.wixstatic.com/media/e1c78c_c1c964561aff45b9a33563dd2c9ee188.jpg/v1/fill/w_174,h_174,al_c,q_80,usm_0.66_1.00_0.01/e1c78c_c1c964561aff45b9a33563dd2c9ee188.webp"></div>
+            <h1>In Vino We Trust</h1>
+            <div class="double-line"></div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, beatae.</p>
+            <p><a href="#">See Menu &gt;</a> </p>
+        </div>
+    </div>
+    </div>
 </div>
-
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 <script src="script.js"></script>
