--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         <div class="double-line"></div>
     </div>
 </div>
-<div class="information-container">
-    <div class="information">
+<div class="about-container">
+    <div class="about">
         <h1>Meet The Chef</h1>
         <div class="double-line"></div>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab alias architecto ex illum mollitia
@@ -68,14 +68,14 @@
     <div class="chef-img">
     </div>
 </div>
-<div class="restaurant-menu">
+<div class="restaurant-menus">
     <div class="container">
         <div class="menus">
             <div class="menu-information">
                 <div class="menu-img"><img
                         src="https://static.wixstatic.com/media/e1c78c_e739583ccde24af893dd10f914b3e26f.jpg/v1/fill/w_180,h_180,al_c,q_80,usm_0.66_1.00_0.01/e1c78c_e739583ccde24af893dd10f914b3e26f.webp">
                 </div>
-                <h2>Tasting Menu</h2>
+                <h3>Tasting Menu</h3>
                 <div class="double-line"></div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, beatae.</p>
                 <p><a href="#">See Menu &gt;</a></p>
@@ -85,7 +85,7 @@
                 <div class="menu-img"><img
                         src="https://static.wixstatic.com/media/e1c78c_4a31dac3b8974025871cdbd8ea43f928.jpg/v1/fill/w_180,h_180,al_c,q_80,usm_0.66_1.00_0.01/e1c78c_4a31dac3b8974025871cdbd8ea43f928.webp">
                 </div>
-                <h2>Chef's Choice</h2>
+                <h3>Chef's Choice</h3>
                 <div class="double-line"></div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, beatae.</p>
                 <p><a href="#">See Menu &gt;</a></p>
@@ -95,7 +95,7 @@
                 <div class="menu-img"><img
                         src="https://static.wixstatic.com/media/e1c78c_c1c964561aff45b9a33563dd2c9ee188.jpg/v1/fill/w_174,h_174,al_c,q_80,usm_0.66_1.00_0.01/e1c78c_c1c964561aff45b9a33563dd2c9ee188.webp">
                 </div>
-                <h2>In Vino We Trust</h2>
+                <h3>In Vino We Trust</h3>
                 <div class="double-line"></div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, beatae.</p>
                 <p><a href="#">See Menu &gt;</a></p>
@@ -103,7 +103,23 @@
         </div>
     </div>
 </div>
-
+<div class="second-menu">
+    <div class="container">
+        <div class="second-menu-information">
+            <h2>Farm to Table</h2>
+            <h3>A Sneak Peak of the New Spring Menu</h3>
+            <div class="double-line"></div>
+            <p>Lorem ipsum dolor sit amet, consectetur.</p>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur.</p>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+            <button>Go To Menus</button>
+        </div>
+    </div>
+    <div class="second-menu-img"></div>
+</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 <script src="script.js"></script>
 </body>
