--- a/index.html
+++ b/index.html
@@ -120,6 +120,17 @@
     </div>
     <div class="second-menu-img"></div>
 </div>
+<div class="review">
+    <div class="container">
+        <img class="quotation"
+             src="https://static.wixstatic.com/media/e1c78c_d34de960415243e08f798bfb1a96d27f.png/v1/fill/w_63,h_50,al_c,usm_0.66_1.00_0.01/e1c78c_d34de960415243e08f798bfb1a96d27f.png">
+        <h2>Absolutely lovet it.</h2>
+        <h2>Amazing food and charismatic chef.</h2>
+        <img class="round-face"
+             src="https://static.wixstatic.com/media/e1c78c_498fc8f795e64622a9c73da803972162.jpg/v1/fill/w_120,h_120,al_c,q_80,usm_0.66_1.00_0.01/e1c78c_498fc8f795e64622a9c73da803972162.webp">
+        <p>Emma Brown, LA</p>
+    </div>
+</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 <script src="script.js"></script>
 </body>
