responsive contact page

--- a/index.html
+++ b/index.html
@@ -131,6 +131,26 @@
         <p>Emma Brown, LA</p>
     </div>
 </div>
+<div class="review-image"><img
+        src="https://static.wixstatic.com/media/e1c78c_ad1edc17f4e041b79ef0aa996a3b4792.jpg/v1/fill/w_980,h_666,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_ad1edc17f4e041b79ef0aa996a3b4792.webp">
+</div>
+<div class="contact">
+    <div class="container">
+        <h2>At Your Service</h2>
+        <p>Tel: 123-456-7890 | Email: info@mymail.com</p>
+        <div class="double-line"></div>
+        <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos dolorem, eius illo officiis possimus
+            voluptatem!</h3>
+        <form id="personal-details">
+            <input type="text" name="name" placeholder="Name" size="45">
+            <input type="email" name="email" placeholder="Email" size="45">
+            <textarea placeholder="Message" cols="41" rows="5"></textarea>
+            <button type="submit" name="submit">Send</button>
+        </form>
+    </div>
+</div>
+
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 <script src="script.js"></script>
 </body>
