--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link href="https://fonts.googleapis.com/css?family=Jaldi|Muli:200" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
           integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
     <link href="sass/main.css" type="text/css" rel="stylesheet">
+
 </head>
 <body>
 <div class="container-main-menu">
@@ -48,8 +50,8 @@
                 type="video/mp4">
     </video>
     <div class="title-container">
-        <div class="title">gourmet chef<br> at your dinner table</div>
-        <div class="double-line"></div>
+        <div class="title">gourmet chef<br> at your dinner table<div class="double-line"></div>
+        </div>
     </div>
 </div>
 <div class="about-container">
@@ -149,9 +151,16 @@
         </form>
     </div>
 </div>
+<div class="slider">
+    <div class="slide" data-index-number="0"><img src="https://static.wixstatic.com/media/e1c78c_7ca189bba491439e9315db2da0feea8e.jpg/v1/fill/w_657,h_493,al_c,q_80,usm_0.66_1.00_0.01/e1c78c_7ca189bba491439e9315db2da0feea8e.jpg" alt="beans"></div>
+    <div class="slide" data-index-number="1"><img src="https://static.wixstatic.com/media/e1c78c_29de2bd86d894ddfbf158161c1f49532.jpg/v1/fill/w_657,h_493,al_c,q_80,usm_0.66_1.00_0.01/e1c78c_29de2bd86d894ddfbf158161c1f49532.jpg" alt="pasta"></div>
+    <div class="slide" data-index-number="2"><img src="https://static.wixstatic.com/media/e1c78c_5ac950dc23634edba84ce90aa6a9b561.jpg/v1/fill/w_657,h_493,al_c,q_80,usm_0.66_1.00_0.01/e1c78c_5ac950dc23634edba84ce90aa6a9b561.jpg" alt="salad"></div>
+    <div class="slide" data-index-number="3"><img src="https://static.wixstatic.com/media/e1c78c_7f186a13a30d4d609f064cd1ba9a3ff0.jpg/v1/fill/w_657,h_493,al_c,q_80,usm_0.66_1.00_0.01/e1c78c_7f186a13a30d4d609f064cd1ba9a3ff0.jpg" alt="pasta"></div>
+</div>
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
