--- a/index.html
+++ b/index.html
@@ -12,7 +12,36 @@
     <link href="sass/main.css" type="text/css" rel="stylesheet">
 
 </head>
-<body>
+<body data-spy="scroll" data-target="#aside-menu" data-offset="150">
+<aside id="aside-menu">
+    <ul class="nav">
+        <li class="dot-container">
+            <a href="#home"><p>home</p>
+                <div class="dot"></div></a>
+        </li>
+        <li class="dot-container">
+            <a href="#about"><p>about</p>
+                <div class="dot"></div></a>
+        </li>
+        <li class="dot-container">
+            <a href="#menus"><p>menus</p>
+                <div class="dot"></div></a>
+        </li>
+        <li class="dot-container">
+            <a href="#reviews"><p>reviews</p>
+                <div class="dot"></div></a>
+        </li>
+        <li class="dot-container">
+            <a href="#contact"><p>contact</p>
+                <div class="dot"></div></a>
+        </li>
+        <li class="dot-container">
+            <a href="#photos"><p>photos</p>
+                <div class="dot"></div></a>
+        </li>
+    </ul>
+
+</aside>
 <div class="container-main-menu">
     <nav class="main-menu container">
         <header><a href="#"><sup>Chef </sup>Michael Bolano </a></header>
@@ -44,7 +73,7 @@
         </div>
     </nav>
 </div>
-<div id="video-container">
+<div id="home" class="video-container">
     <video loop autoplay>
         <source src="http://video.wixstatic.com/video/e1c78c_a319e41376c84e2884de1b518bc0e79f/720p/mp4/file.mp4"
                 type="video/mp4">
@@ -54,7 +83,7 @@
         </div>
     </div>
 </div>
-<div class="about-container">
+<div id="about" class="about-container">
     <div class="about">
         <h1>Meet The Chef</h1>
         <div class="double-line"></div>
@@ -70,12 +99,12 @@
     <div class="chef-img">
     </div>
 </div>
-<div class="restaurant-menus">
+<div id="menus" class="restaurant-menus">
     <div class="container">
         <div class="menus">
             <div class="menu-information">
                 <div class="menu-img"><img
-                        src="https://static.wixstatic.com/media/e1c78c_e739583ccde24af893dd10f914b3e26f.jpg/v1/fill/w_180,h_180,al_c,q_80,usm_0.66_1.00_0.01/e1c78c_e739583ccde24af893dd10f914b3e26f.webp">
+                        src="https://static.wixstatic.com/media/e1c78c_e739583ccde24af893dd10f914b3e26f.jpg/v1/fill/w_180,h_180,al_c,q_80,usm_0.66_1.00_0.01/e1c78c_e739583ccde24af893dd10f914b3e26f.jpg">
                 </div>
                 <h3>Tasting Menu</h3>
                 <div class="double-line"></div>
@@ -85,7 +114,7 @@
         -->
             <div class="menu-information">
                 <div class="menu-img"><img
-                        src="https://static.wixstatic.com/media/e1c78c_4a31dac3b8974025871cdbd8ea43f928.jpg/v1/fill/w_180,h_180,al_c,q_80,usm_0.66_1.00_0.01/e1c78c_4a31dac3b8974025871cdbd8ea43f928.webp">
+                        src="https://static.wixstatic.com/media/e1c78c_4a31dac3b8974025871cdbd8ea43f928.jpg/v1/fill/w_180,h_180,al_c,q_80,usm_0.66_1.00_0.01/e1c78c_4a31dac3b8974025871cdbd8ea43f928.jpg">
                 </div>
                 <h3>Chef's Choice</h3>
                 <div class="double-line"></div>
@@ -95,7 +124,7 @@
         -->
             <div class="menu-information">
                 <div class="menu-img"><img
-                        src="https://static.wixstatic.com/media/e1c78c_c1c964561aff45b9a33563dd2c9ee188.jpg/v1/fill/w_174,h_174,al_c,q_80,usm_0.66_1.00_0.01/e1c78c_c1c964561aff45b9a33563dd2c9ee188.webp">
+                        src="https://static.wixstatic.com/media/e1c78c_c1c964561aff45b9a33563dd2c9ee188.jpg/v1/fill/w_174,h_174,al_c,q_80,usm_0.66_1.00_0.01/e1c78c_c1c964561aff45b9a33563dd2c9ee188.jpg">
                 </div>
                 <h3>In Vino We Trust</h3>
                 <div class="double-line"></div>
@@ -122,21 +151,21 @@
     </div>
     <div class="second-menu-img"></div>
 </div>
-<div class="review">
+<div id="reviews" class="review">
     <div class="container">
         <img class="quotation"
              src="https://static.wixstatic.com/media/e1c78c_d34de960415243e08f798bfb1a96d27f.png/v1/fill/w_63,h_50,al_c,usm_0.66_1.00_0.01/e1c78c_d34de960415243e08f798bfb1a96d27f.png">
         <h2>Absolutely lovet it.</h2>
         <h2>Amazing food and charismatic chef.</h2>
         <img class="round-face"
-             src="https://static.wixstatic.com/media/e1c78c_498fc8f795e64622a9c73da803972162.jpg/v1/fill/w_120,h_120,al_c,q_80,usm_0.66_1.00_0.01/e1c78c_498fc8f795e64622a9c73da803972162.webp">
+             src="https://static.wixstatic.com/media/e1c78c_498fc8f795e64622a9c73da803972162.jpg/v1/fill/w_120,h_120,al_c,q_80,usm_0.66_1.00_0.01/e1c78c_498fc8f795e64622a9c73da803972162.jpg">
         <p>Emma Brown, LA</p>
     </div>
 </div>
 <div class="review-image"><img
-        src="https://static.wixstatic.com/media/e1c78c_ad1edc17f4e041b79ef0aa996a3b4792.jpg/v1/fill/w_980,h_666,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_ad1edc17f4e041b79ef0aa996a3b4792.webp">
+        src="https://static.wixstatic.com/media/e1c78c_ad1edc17f4e041b79ef0aa996a3b4792.jpg/v1/fill/w_980,h_666,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_ad1edc17f4e041b79ef0aa996a3b4792.jpg">
 </div>
-<div class="contact">
+<div id="contact" class="contact">
     <div class="container">
         <h2>At Your Service</h2>
         <p>Tel: 123-456-7890 | Email: info@mymail.com</p>
@@ -151,15 +180,29 @@
         </form>
     </div>
 </div>
-<div class="slider">
+<div id="photos" class="slider">
     <div class="slide" data-index-number="0"><img src="https://static.wixstatic.com/media/e1c78c_7ca189bba491439e9315db2da0feea8e.jpg/v1/fill/w_657,h_493,al_c,q_80,usm_0.66_1.00_0.01/e1c78c_7ca189bba491439e9315db2da0feea8e.jpg" alt="beans"></div>
     <div class="slide" data-index-number="1"><img src="https://static.wixstatic.com/media/e1c78c_29de2bd86d894ddfbf158161c1f49532.jpg/v1/fill/w_657,h_493,al_c,q_80,usm_0.66_1.00_0.01/e1c78c_29de2bd86d894ddfbf158161c1f49532.jpg" alt="pasta"></div>
     <div class="slide" data-index-number="2"><img src="https://static.wixstatic.com/media/e1c78c_5ac950dc23634edba84ce90aa6a9b561.jpg/v1/fill/w_657,h_493,al_c,q_80,usm_0.66_1.00_0.01/e1c78c_5ac950dc23634edba84ce90aa6a9b561.jpg" alt="salad"></div>
     <div class="slide" data-index-number="3"><img src="https://static.wixstatic.com/media/e1c78c_7f186a13a30d4d609f064cd1ba9a3ff0.jpg/v1/fill/w_657,h_493,al_c,q_80,usm_0.66_1.00_0.01/e1c78c_7f186a13a30d4d609f064cd1ba9a3ff0.jpg" alt="pasta"></div>
 </div>
+<div class="small-screen-slide"><img src="https://static.wixstatic.com/media/e1c78c_29de2bd86d894ddfbf158161c1f49532.jpg/v1/fill/w_657,h_493,al_c,q_80,usm_0.66_1.00_0.01/e1c78c_29de2bd86d894ddfbf158161c1f49532.jpg" alt="pasta"></div>
+<footer>
+    <div class="icons">
+        <div class="icon"><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></div>
+        <div class="icon"><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></div>
+        <div class="icon"><a href="#"><i class="fa fa-foursquare" aria-hidden="true"></i></a></div>
+        <div class="icon"><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></div>
+    </div>
+    <h3>#ChefMichaelBolano</h3>
+    <p>Tel: 123-456-7890 | Email: info@mymail.com</p>
+    <div class="up-icon"><i class="fa fa-chevron-up" aria-hidden="true"></i></div>
+    <p><a href="#">Back to Top</a></p>
+</footer>
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
 <script src="script.js"></script>
 </body>
