aside menu with active class and hover efect

--- a/index.html
+++ b/index.html
@@ -16,31 +16,30 @@
 <aside id="aside-menu">
     <ul class="nav">
         <li class="dot-container">
-            <a href="#home"><p>home</p>
+            <a href="#home"><span>home</span>
                 <div class="dot"></div></a>
         </li>
         <li class="dot-container">
-            <a href="#about"><p>about</p>
+            <a href="#about"><span>about</span>
                 <div class="dot"></div></a>
         </li>
         <li class="dot-container">
-            <a href="#menus"><p>menus</p>
+            <a href="#menus"><span>menus</span>
                 <div class="dot"></div></a>
         </li>
         <li class="dot-container">
-            <a href="#reviews"><p>reviews</p>
+            <a href="#reviews"><span>reviews</span>
                 <div class="dot"></div></a>
         </li>
         <li class="dot-container">
-            <a href="#contact"><p>contact</p>
+            <a href="#contact"><span>contact</span>
                 <div class="dot"></div></a>
         </li>
         <li class="dot-container">
-            <a href="#photos"><p>photos</p>
+            <a href="#photos"><span>photos</span>
                 <div class="dot"></div></a>
         </li>
     </ul>
-
 </aside>
 <div class="container-main-menu">
     <nav class="main-menu container">
