final cleanup scss, add parallax effect

--- a/index.html
+++ b/index.html
@@ -161,8 +161,7 @@
         <p>Emma Brown, LA</p>
     </div>
 </div>
-<div class="review-image"><img
-        src="https://static.wixstatic.com/media/e1c78c_ad1edc17f4e041b79ef0aa996a3b4792.jpg/v1/fill/w_980,h_666,al_c,q_85,usm_0.66_1.00_0.01/e1c78c_ad1edc17f4e041b79ef0aa996a3b4792.jpg">
+<div class="review-image">
 </div>
 <div id="contact" class="contact">
     <div class="container">
