--- a/index.html
+++ b/index.html
@@ -46,28 +46,28 @@
         <header><a href="#"><sup>Chef </sup>Michael Bolano </a></header>
         <div class="icon-header"><i class="fa fa-window-minimize" aria-hidden="true"></i></div>
         <ul class="menu">
-            <li><a class="active" href="#">Home</a></li>
-            <li><a href="#">Menus</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#menus">Menus</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
         <div class="icons">
-            <div class="icon"><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></div>
-            <div class="icon"><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></div>
-            <div class="icon"><a href="#"><i class="fa fa-foursquare" aria-hidden="true"></i></a></div>
-            <div class="icon"><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></div>
+            <div class="icon"><a href="https://pl-pl.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></div>
+            <div class="icon"><a href="https://twitter.com/?lang=pl" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></div>
+            <div class="icon"><a href="https://foursquare.com/" target="_blank"><i class="fa fa-foursquare" aria-hidden="true"></i></a></div>
+            <div class="icon"><a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></div>
         </div>
         <button class="menu"><i class="fa fa-bars" aria-hidden="true"></i></button>
         <div class="small-menu invisible">
             <ul class="small-menu--menu">
-                <li><a class="active" href="#">Home</a></li>
-                <li><a href="#">Menus</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#menus">Menus</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
             <ul class="small-menu--icons">
-                <li class="icon"><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                <li class="icon"><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                <li class="icon"><a href="#"><i class="fa fa-foursquare" aria-hidden="true"></i></a></li>
-                <li class="icon"><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                <li class="icon"><a href="https://pl-pl.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                <li class="icon"><a href="https://twitter.com/?lang=pl" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                <li class="icon"><a href="https://foursquare.com/" target="_blank"><i class="fa fa-foursquare" aria-hidden="true"></i></a></li>
+                <li class="icon"><a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
             </ul>
         </div>
     </nav>
@@ -194,8 +194,10 @@
     </div>
     <h3>#ChefMichaelBolano</h3>
     <p>Tel: 123-456-7890 | Email: info@mymail.com</p>
+    <div class="back-to-top"><a href="#home">
     <div class="up-icon"><i class="fa fa-chevron-up" aria-hidden="true"></i></div>
-    <p><a href="#">Back to Top</a></p>
+    <p>Back to Top</p>
+    </a></div>
 </footer>
 
 
