--- a/menus.html
+++ b/menus.html
@@ -22,10 +22,15 @@
             <li><a href="#contact">Contact</a></li>
         </ul>
         <div class="icons">
-            <div class="icon"><a href="https://pl-pl.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></div>
-            <div class="icon"><a href="https://twitter.com/?lang=pl" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></div>
-            <div class="icon"><a href="https://foursquare.com/" target="_blank"><i class="fa fa-foursquare" aria-hidden="true"></i></a></div>
-            <div class="icon"><a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></div>
+            <div class="icon"><a href="https://pl-pl.facebook.com/" target="_blank"><i class="fa fa-facebook"
+                                                                                       aria-hidden="true"></i></a></div>
+            <div class="icon"><a href="https://twitter.com/?lang=pl" target="_blank"><i class="fa fa-twitter"
+                                                                                        aria-hidden="true"></i></a>
+            </div>
+            <div class="icon"><a href="https://foursquare.com/" target="_blank"><i class="fa fa-foursquare"
+                                                                                   aria-hidden="true"></i></a></div>
+            <div class="icon"><a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram"
+                                                                                      aria-hidden="true"></i></a></div>
         </div>
         <button class="menu"><i class="fa fa-bars" aria-hidden="true"></i></button>
         <div class="small-menu invisible">
@@ -35,69 +40,89 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <ul class="small-menu--icons">
-                <li class="icon"><a href="https://pl-pl.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                <li class="icon"><a href="https://twitter.com/?lang=pl" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                <li class="icon"><a href="https://foursquare.com/" target="_blank"><i class="fa fa-foursquare" aria-hidden="true"></i></a></li>
-                <li class="icon"><a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                <li class="icon"><a href="https://pl-pl.facebook.com/" target="_blank"><i class="fa fa-facebook"
+                                                                                          aria-hidden="true"></i></a>
+                </li>
+                <li class="icon"><a href="https://twitter.com/?lang=pl" target="_blank"><i class="fa fa-twitter"
+                                                                                           aria-hidden="true"></i></a>
+                </li>
+                <li class="icon"><a href="https://foursquare.com/" target="_blank"><i class="fa fa-foursquare"
+                                                                                      aria-hidden="true"></i></a></li>
+                <li class="icon"><a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram"
+                                                                                         aria-hidden="true"></i></a>
+                </li>
             </ul>
         </div>
     </nav>
 </div>
 <div class="main-photo"></div>
-<div class="container menu-side">
-<h1>Menus</h1>
-<div class="dishes-list">
-    <h2>farm to table</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur.</p>
-    <div class="line"></div>
-    <div class="dish">peas with mint and rose petals</div>
-    <div class="dish">falafel-spiced tomatoes on whole wheat flatbread</div>
-    <div class="dish">farmer's market quinoa salad</div>
-    <div class="dish">grilled corn with herb butter</div>
-    <div class="dish">sparkling wine with ginger ale and cherries</div>
-    <div class="dish">primavera risotto</div>
+<div class="menu-side">
+<div class="container">
+    <h1>Menus</h1>
+    <div class="dishes-list">
+        <h2>farm to table</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur.</p>
+        <div class="line"></div>
+        <div class="dish-wrapper">
+            <div class="dish">peas with mint and rose petals</div>
+            <div class="dish">falafel-spiced tomatoes on whole wheat flatbread</div>
+            <div class="dish">farmer's market quinoa salad</div>
+        </div><div class="dish-wrapper">
+            <div class="dish">grilled corn with herb butter</div>
+            <div class="dish">sparkling wine with ginger ale and cherries</div>
+            <div class="dish">primavera risotto</div>
+        </div>
 
+    </div>
+    <div class="dishes-list">
+        <h2>in vino we trust</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, quam!</p>
+        <div class="line"></div>
+        <div class="dish-wrapper">
+            <div class="dish">neo caprese</div>
+            <div class="dish">poached eggs and asparagus</div>
+            <div class="dish">smoked salmon with brandy</div>
+        </div><div class="dish-wrapper">
+            <div class="dish">pears and goats cheese</div>
+            <div class="dish">crab bisque</div>
+            <div class="dish">whole wheat pizza</div>
+        </div>
+        <div class="dish">sea bass and oranges</div>
 
-</div>
-<div class="dishes-list">
-    <h2>in vino we trust</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, quam!</p>
-    <div class="line"></div>
-    <div class="dish">neo caprese</div>
-    <div class="dish">poached eggs and asparagus</div>
-    <div class="dish">smoked salmon with brandy</div>
-    <div class="dish">pears and goats cheese</div>
-    <div class="dish">crab bisque</div>
-    <div class="dish">whole wheat pizza</div>
-    <div class="dish">sea bass and oranges</div>
-
-</div>
-<div class="dishes-list">
-    <h2>tasting menu</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, in.</p>
-    <div class="line"></div>
-    <div class="dish">jamon & salchichon</div>
-    <div class="dish">pan con tomate</div>
-    <div class="dish">croqueras de pollo</div>
-    <div class="dish">padron peppers</div>
-    <div class="dish">broccoli and chilli tuna</div>
-    <div class="dish">spanish seafood paella</div>
-    <div class="dish">fresh pineaple and mint </div>
-    <div class="dish">balsamic raspberries and mascarpone cheese</div>
-    <div class="dish">fresh pineapple and mint</div>
-</div>
-<div class="dishes-list">
-    <h2>holidays menu</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur.</p>
-    <div class="line"></div>
-    <div class="dish">a shot of homemade eggnog, modern style</div>
-    <div class="dish">boleanos festive salad with honey-grilled apples</div>
-    <div class="dish">rustic cured turkey encrusted with candied pine nuts</div>
-    <div class="dish">pork medallions topped with sweet corn cream</div>
-    <div class="dish">mini polenta cakes stuffed with mushrooms and feta</div>
-    <div class="dish">roasted yams with a dash of bourbon</div>
-    <div class="dish">bacon rosemary mashed potatoes and parsley</div>
-    <div class="dish">quinoa puttanesca with chili cranberry sauce</div>
+    </div>
+    <div class="dishes-list">
+        <h2>tasting menu</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, in.</p>
+        <div class="line"></div>
+        <div class="dish-wrapper">
+            <div class="dish">jamon & salchichon</div>
+            <div class="dish">pan con tomate</div>
+            <div class="dish">croqueras de pollo</div>
+            <div class="dish">padron peppers</div>
+        </div><div class="dish-wrapper">
+            <div class="dish">broccoli and chilli tuna</div>
+            <div class="dish">spanish seafood paella</div>
+            <div class="dish">fresh pineaple and mint</div>
+            <div class="dish">balsamic raspberries and mascarpone cheese</div>
+        </div>
+        <div class="dish">fresh pineapple and mint</div>
+    </div>
+    <div class="dishes-list">
+        <h2>holidays menu</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur.</p>
+        <div class="line"></div>
+        <div class="dish-wrapper">
+            <div class="dish">a shot of homemade eggnog, modern style</div>
+            <div class="dish">boleanos festive salad with honey-grilled apples</div>
+            <div class="dish">rustic cured turkey encrusted with candied pine nuts</div>
+            <div class="dish">pork medallions topped with sweet corn cream</div>
+        </div><div class="dish-wrapper">
+            <div class="dish">mini polenta cakes stuffed with mushrooms and feta</div>
+            <div class="dish">roasted yams with a dash of bourbon</div>
+            <div class="dish">bacon rosemary mashed potatoes and parsley</div>
+            <div class="dish">quinoa puttanesca with chili cranberry sauce</div>
+        </div>
+    </div>
 </div>
 </div>
 <footer>
