connect menu side with index.html

--- a/menus.html
+++ b/menus.html
@@ -55,9 +55,9 @@
         </div>
     </nav>
 </div>
+<div class="menu-side-container">
 <div class="main-photo"></div>
 <div class="menu-side">
-<div class="container">
     <h1>Menus</h1>
     <div class="dishes-list">
         <h2>farm to table</h2>
