--- a/index.html
+++ b/index.html
@@ -17,33 +17,39 @@
     <ul class="nav">
         <li class="dot-container">
             <a href="#home"><span>home</span>
-                <div class="dot"></div></a>
+                <div class="dot"></div>
+            </a>
         </li>
         <li class="dot-container">
             <a href="#about"><span>about</span>
-                <div class="dot"></div></a>
+                <div class="dot"></div>
+            </a>
         </li>
         <li class="dot-container">
             <a href="#menus"><span>menus</span>
-                <div class="dot"></div></a>
+                <div class="dot"></div>
+            </a>
         </li>
         <li class="dot-container">
             <a href="#reviews"><span>reviews</span>
-                <div class="dot"></div></a>
+                <div class="dot"></div>
+            </a>
         </li>
         <li class="dot-container">
             <a href="#contact"><span>contact</span>
-                <div class="dot"></div></a>
+                <div class="dot"></div>
+            </a>
         </li>
         <li class="dot-container">
             <a href="#photos"><span>photos</span>
-                <div class="dot"></div></a>
+                <div class="dot"></div>
+            </a>
         </li>
     </ul>
 </aside>
 <div class="container-main-menu">
     <nav class="main-menu container">
-        <header><a href="#"><sup>Chef </sup>Michael Bolano </a></header>
+        <header><a href="#home"><sup>Chef </sup>Michael Bolano </a></header>
         <div class="icon-header"><i class="fa fa-window-minimize" aria-hidden="true"></i></div>
         <ul class="menu">
             <li><a href="#home">Home</a></li>
@@ -51,10 +57,15 @@
             <li><a href="#contact">Contact</a></li>
         </ul>
         <div class="icons">
-            <div class="icon"><a href="https://pl-pl.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></div>
-            <div class="icon"><a href="https://twitter.com/?lang=pl" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></div>
-            <div class="icon"><a href="https://foursquare.com/" target="_blank"><i class="fa fa-foursquare" aria-hidden="true"></i></a></div>
-            <div class="icon"><a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></div>
+            <div class="icon"><a href="https://pl-pl.facebook.com/" target="_blank"><i class="fa fa-facebook"
+                                                                                       aria-hidden="true"></i></a></div>
+            <div class="icon"><a href="https://twitter.com/?lang=pl" target="_blank"><i class="fa fa-twitter"
+                                                                                        aria-hidden="true"></i></a>
+            </div>
+            <div class="icon"><a href="https://foursquare.com/" target="_blank"><i class="fa fa-foursquare"
+                                                                                   aria-hidden="true"></i></a></div>
+            <div class="icon"><a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram"
+                                                                                      aria-hidden="true"></i></a></div>
         </div>
         <button class="menu"><i class="fa fa-bars" aria-hidden="true"></i></button>
         <div class="small-menu invisible">
@@ -64,10 +75,17 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <ul class="small-menu--icons">
-                <li class="icon"><a href="https://pl-pl.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                <li class="icon"><a href="https://twitter.com/?lang=pl" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                <li class="icon"><a href="https://foursquare.com/" target="_blank"><i class="fa fa-foursquare" aria-hidden="true"></i></a></li>
-                <li class="icon"><a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                <li class="icon"><a href="https://pl-pl.facebook.com/" target="_blank"><i class="fa fa-facebook"
+                                                                                          aria-hidden="true"></i></a>
+                </li>
+                <li class="icon"><a href="https://twitter.com/?lang=pl" target="_blank"><i class="fa fa-twitter"
+                                                                                           aria-hidden="true"></i></a>
+                </li>
+                <li class="icon"><a href="https://foursquare.com/" target="_blank"><i class="fa fa-foursquare"
+                                                                                      aria-hidden="true"></i></a></li>
+                <li class="icon"><a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram"
+                                                                                         aria-hidden="true"></i></a>
+                </li>
             </ul>
         </div>
     </nav>
@@ -78,7 +96,8 @@
                 type="video/mp4">
     </video>
     <div class="title-container">
-        <div class="title">gourmet chef<br> at your dinner table<div class="double-line"></div>
+        <div class="title">gourmet chef<br> at your dinner table
+            <div class="double-line"></div>
         </div>
     </div>
 </div>
@@ -108,7 +127,7 @@
                 <h3>Tasting Menu</h3>
                 <div class="double-line"></div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, beatae.</p>
-                <p><a href="#">See Menu &gt;</a></p>
+                <p><a href="#menus">See Menu &gt;</a></p>
             </div><!--
         -->
             <div class="menu-information">
@@ -118,7 +137,7 @@
                 <h3>Chef's Choice</h3>
                 <div class="double-line"></div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, beatae.</p>
-                <p><a href="#">See Menu &gt;</a></p>
+                <p><a href="#menus">See Menu &gt;</a></p>
             </div><!--
         -->
             <div class="menu-information">
@@ -128,7 +147,7 @@
                 <h3>In Vino We Trust</h3>
                 <div class="double-line"></div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, beatae.</p>
-                <p><a href="#">See Menu &gt;</a></p>
+                <p><a href="#menus">See Menu &gt;</a></p>
             </div>
         </div>
     </div>
@@ -179,12 +198,96 @@
     </div>
 </div>
 <div id="photos" class="slider">
-    <div class="slide" data-index-number="0"><img src="https://static.wixstatic.com/media/e1c78c_7ca189bba491439e9315db2da0feea8e.jpg/v1/fill/w_657,h_493,al_c,q_80,usm_0.66_1.00_0.01/e1c78c_7ca189bba491439e9315db2da0feea8e.jpg" alt="beans"></div>
-    <div class="slide" data-index-number="1"><img src="https://static.wixstatic.com/media/e1c78c_29de2bd86d894ddfbf158161c1f49532.jpg/v1/fill/w_657,h_493,al_c,q_80,usm_0.66_1.00_0.01/e1c78c_29de2bd86d894ddfbf158161c1f49532.jpg" alt="pasta"></div>
-    <div class="slide" data-index-number="2"><img src="https://static.wixstatic.com/media/e1c78c_5ac950dc23634edba84ce90aa6a9b561.jpg/v1/fill/w_657,h_493,al_c,q_80,usm_0.66_1.00_0.01/e1c78c_5ac950dc23634edba84ce90aa6a9b561.jpg" alt="salad"></div>
-    <div class="slide" data-index-number="3"><img src="https://static.wixstatic.com/media/e1c78c_7f186a13a30d4d609f064cd1ba9a3ff0.jpg/v1/fill/w_657,h_493,al_c,q_80,usm_0.66_1.00_0.01/e1c78c_7f186a13a30d4d609f064cd1ba9a3ff0.jpg" alt="pasta"></div>
+    <div class="slide" data-index-number="0"><img
+            src="https://static.wixstatic.com/media/e1c78c_7ca189bba491439e9315db2da0feea8e.jpg/v1/fill/w_657,h_493,al_c,q_80,usm_0.66_1.00_0.01/e1c78c_7ca189bba491439e9315db2da0feea8e.jpg"
+            alt="beans"></div>
+    <div class="slide" data-index-number="1"><img
+            src="https://static.wixstatic.com/media/e1c78c_29de2bd86d894ddfbf158161c1f49532.jpg/v1/fill/w_657,h_493,al_c,q_80,usm_0.66_1.00_0.01/e1c78c_29de2bd86d894ddfbf158161c1f49532.jpg"
+            alt="pasta"></div>
+    <div class="slide" data-index-number="2"><img
+            src="https://static.wixstatic.com/media/e1c78c_5ac950dc23634edba84ce90aa6a9b561.jpg/v1/fill/w_657,h_493,al_c,q_80,usm_0.66_1.00_0.01/e1c78c_5ac950dc23634edba84ce90aa6a9b561.jpg"
+            alt="salad"></div>
+    <div class="slide" data-index-number="3"><img
+            src="https://static.wixstatic.com/media/e1c78c_7f186a13a30d4d609f064cd1ba9a3ff0.jpg/v1/fill/w_657,h_493,al_c,q_80,usm_0.66_1.00_0.01/e1c78c_7f186a13a30d4d609f064cd1ba9a3ff0.jpg"
+            alt="pasta"></div>
 </div>
-<div class="small-screen-slide"><img src="https://static.wixstatic.com/media/e1c78c_29de2bd86d894ddfbf158161c1f49532.jpg/v1/fill/w_657,h_493,al_c,q_80,usm_0.66_1.00_0.01/e1c78c_29de2bd86d894ddfbf158161c1f49532.jpg" alt="pasta"></div>
+<div class="small-screen-slide"><img
+        src="https://static.wixstatic.com/media/e1c78c_29de2bd86d894ddfbf158161c1f49532.jpg/v1/fill/w_657,h_493,al_c,q_80,usm_0.66_1.00_0.01/e1c78c_29de2bd86d894ddfbf158161c1f49532.jpg"
+        alt="pasta"></div>
+<div class="menu-side-container">
+    <div class="main-photo"></div>
+    <div class="menu-side">
+        <div class="container">
+            <h1>Menus</h1>
+            <div class="dishes-list">
+                <h2>farm to table</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur.</p>
+                <div class="line"></div>
+                <div class="dish-wrapper">
+                    <div class="dish">peas with mint and rose petals</div>
+                    <div class="dish">falafel-spiced tomatoes on whole wheat flatbread</div>
+                    <div class="dish">farmer's market quinoa salad</div>
+                </div><!--
+                --><div class="dish-wrapper">
+                    <div class="dish">grilled corn with herb butter</div>
+                    <div class="dish">sparkling wine with ginger ale and cherries</div>
+                    <div class="dish">primavera risotto</div>
+                </div>
+            </div>
+            <div class="dishes-list">
+                <h2>in vino we trust</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, quam!</p>
+                <div class="line"></div>
+                <div class="dish-wrapper">
+                    <div class="dish">neo caprese</div>
+                    <div class="dish">poached eggs and asparagus</div>
+                    <div class="dish">smoked salmon with brandy</div>
+                </div><!--
+                --><div class="dish-wrapper">
+                    <div class="dish">pears and goats cheese</div>
+                    <div class="dish">crab bisque</div>
+                    <div class="dish">whole wheat pizza</div>
+                </div>
+                <div class="dish">sea bass and oranges</div>
+            </div>
+            <div class="dishes-list">
+                <h2>tasting menu</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, in.</p>
+                <div class="line"></div>
+                <div class="dish-wrapper">
+                    <div class="dish">jamon & salchichon</div>
+                    <div class="dish">pan con tomate</div>
+                    <div class="dish">croqueras de pollo</div>
+                    <div class="dish">padron peppers</div>
+                </div><!--
+                --><div class="dish-wrapper">
+                    <div class="dish">broccoli and chilli tuna</div>
+                    <div class="dish">spanish seafood paella</div>
+                    <div class="dish">fresh pineaple and mint</div>
+                    <div class="dish">balsamic raspberries and mascarpone cheese</div>
+                </div>
+                <div class="dish">fresh pineapple and mint</div>
+            </div>
+            <div class="dishes-list">
+                <h2>holidays menu</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur.</p>
+                <div class="line"></div>
+                <div class="dish-wrapper">
+                    <div class="dish">a shot of homemade eggnog, modern style</div>
+                    <div class="dish">boleanos festive salad with honey-grilled apples</div>
+                    <div class="dish">rustic cured turkey encrusted with candied pine nuts</div>
+                    <div class="dish">pork medallions topped with sweet corn cream</div>
+                </div><!--
+                --><div class="dish-wrapper">
+                    <div class="dish">mini polenta cakes stuffed with mushrooms and feta</div>
+                    <div class="dish">roasted yams with a dash of bourbon</div>
+                    <div class="dish">bacon rosemary mashed potatoes and parsley</div>
+                    <div class="dish">quinoa puttanesca with chili cranberry sauce</div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <footer>
     <div class="icons">
         <div class="icon"><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></div>
@@ -195,8 +298,8 @@
     <h3>#ChefMichaelBolano</h3>
     <p>Tel: 123-456-7890 | Email: info@mymail.com</p>
     <div class="back-to-top"><a href="#home">
-    <div class="up-icon"><i class="fa fa-chevron-up" aria-hidden="true"></i></div>
-    <p>Back to Top</p>
+        <div class="up-icon"><i class="fa fa-chevron-up" aria-hidden="true"></i></div>
+        <p>Back to Top</p>
     </a></div>
 </footer>
 
