parallax effect only on large screen, on small and medium screen add static background, make everything responsive one more time

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
         <source src="http://video.wixstatic.com/video/e1c78c_a319e41376c84e2884de1b518bc0e79f/720p/mp4/file.mp4"
                 type="video/mp4">
     </video>
+    <div class="video-img"></div>
     <div class="title-container">
         <div class="title">gourmet chef<br> at your dinner table
             <div class="double-line"></div>
@@ -169,9 +170,7 @@
             <button>Go To Menus</button>
         </div>
     </div>
-    <div class="second-menu-img bg-slide" data-image-width="1862" data-image-height="866">
-    <div class="background"></div>
-    </div>
+    <div class="second-menu-img"></div>
 </div>
 <div id="reviews" class="review">
     <div class="container">
@@ -187,6 +186,8 @@
 <div class="review-image bg-slide" data-image-width="1862" data-image-height="713">
     <div class="background"></div>
 </div>
+<div class="review-image-small-screen"></div>
+
 <div id="contact" class="contact">
     <div class="container">
         <h2>At Your Service</h2>
